Add sandbox html title

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head></head>
+    <head>
+        <title>Material Multi-picker Demo/Sandbox</title>
+    </head>
     <body>
         <div id='sandbox'></div>
     </body>
